--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="col-4 d-flex justify-content-center">
                 <div class="m-3">
-                    <img src="../pictures/ncr-p.jpg" class="img-fluid w-50" alt="...">
+                    <img src="ncr-p.jpg" class="img-fluid w-50" alt="...">
                 </div>
             </div>
         </div>
@@ -189,5 +189,6 @@
 
 
 </body>
+
 
 </html>
