--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="card-body">
             <h5 class="card-title">@Ranjan-kumar</h5>
             <p class="card-text">“This portfolio website showcases my projects, ideas, and journey in the field of technology and development.”</p>
-            <a href="#" class="btn btn-primary">Go to web-page</a>
+            <a href="https://rxc-chiku.github.io/potfolio/" class="btn btn-primary">Go to web-page</a>
         </div>
     </div>
     <div class="card">
@@ -192,3 +192,4 @@
 
 
 </html>
+
