--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Follow Me</h5>
                         <p class="card-text"></p>
-                        <a href="www.linkedin.com/in/ranjan-kumar-jena-21b791309" class="btn"><strong><i
+                        <a href="https://www.linkedin.com/in/ranjan-kumar-jena-21b791309/" class="btn"><strong><i
                                     class="fa-brands fa-linkedin"></i></strong></a>
                         <a href="https://github.com/Rxc-chiku" class="btn"><strong><i
                                     class="fa-brands fa-github"></i></strong></a>
@@ -192,4 +192,5 @@
 
 
 </html>
+
 
