--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <P class="bg-highlight">
                         I'm a Programmer...... <br><br>
                         <span class="bg-highlight">“ skilled in HTML, <br>CSS, JavaScript,
-                            Python, Django, and databases,<br> passionate about
+                            Python, Bootstrap, and databases,<br> passionate about
                             building responsive and dynamic web applications.”</span>
                     </P>
                 </div>
@@ -192,6 +192,7 @@
 
 
 </html>
+
 
 
 
