--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <style>
+            .add{
+                font-size: 50px;
+            }
+
+            .note{
+                font-size: 20px;
+            }
+    </style>
     <title>@RANJAN KUMAR</title>
 </head>
 
@@ -28,7 +37,7 @@
                     <p class="add">" HELLO, I'M" <br>
                         <span class="name">RANJAN KUMAR </span>
                     </p>
-                    <P class="bg-highlight">
+                    <P class="bg-highlight note">
                         I'm a Programmer...... <br><br>
                         <span class="bg-highlight">“ skilled in HTML, <br>CSS, JavaScript,
                             Python, Bootstrap, and databases,<br> passionate about
@@ -192,6 +201,7 @@
 
 
 </html>
+
 
 
 
