--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-   <style>
-            .add{
-                font-size: 50px;
-            }
-
-            .note{
-                font-size: 20px;
-            }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <title>@RANJAN KUMAR</title>
 </head>
 
@@ -201,6 +193,7 @@
 
 
 </html>
+
 
 
 
