--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-4 d-flex justify-content-center">
                 <div class="m-3">
-                    <img src="ncr-p.jpg" class="img-fluid w-75" alt="...">
+                    <img src="ncr-p.jpg" class="img-fluid w-75" alt="..." style="border-radius: 30px;">
                 </div>
             </div>
         </div>
@@ -193,6 +193,7 @@
 
 
 </html>
+
 
 
 
