--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </div>
     <!-- footer -->
     <footer class="text-center text-muted py-3 bg-dark text-light">
-        <small>© <span id="year"></span> Ranjan Kumar Jena — All Rights Reserved.</small>
+        <small>© <span id="year"></span> @Ranjan Kumar — All Rights Reserved.</small>
     </footer>
 
     <script>
@@ -200,6 +200,7 @@
 
 
 </html>
+
 
 
 
