--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>@RANJAN KUMAR</title>
 </head>
 
-<body onload="console.log('Welcome to my home page!');">
+<body >
     <!-- navbar -->
     <nav class="navbar navbar-light bg-light shadow-sm">
         <div class="container-fluid">
@@ -200,6 +200,7 @@
 
 
 </html>
+
 
 
 
