--- a/index.html
+++ b/index.html
@@ -182,6 +182,14 @@
             <a href="https://rxc-chiku.github.io/pentagram/" class="btn btn-primary">Go to web-page</a>
         </div>
     </div>
+    <div class="card">
+        <h5 class="card-header">project-4</h5>
+        <div class="card-body">
+            <h5 class="card-title">LearnBuddy</h5>
+            <p class="card-text">“LearnBuddy — an AI-powered platform that guides students in learning computer science, discovering hackathons, and accessing personalized study materials all in one place”</p>
+            <a href="https://github.com/Rxc-chiku/LearnBuddy" class="btn btn-primary">View the code</a>
+        </div>
+    </div>
     <!-- footer -->
     <footer class="text-center text-muted py-3 bg-dark text-light">
         <small>© <span id="year"></span> @Ranjan Kumar — All Rights Reserved.</small>
@@ -200,6 +208,7 @@
 
 
 </html>
+
 
 
 
