Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="card-body">
             <h5 class="card-title">BookNookclub</h5>
             <p class="card-text">“A circle of curious minds, where every book sparks a new conversation”</p>
-            <a href="https://rxc-chiku.github.io/booknook-club-/booknook/index.html" class="btn btn-primary">View the code</a>
+            <a href="https://rxc-chiku.github.io/booknook-club-/booknook/index.html" class="btn btn-primary">View the page</a>
         </div>
     </div>
     <!-- footer -->
@@ -216,6 +216,7 @@
 
 
 </html>
+
 
 
 
